--- a/shared/government/administration/出生率.md
+++ b/shared/government/administration/出生率.md
@@ -3,3 +3,12 @@
 出生率を上げるのはとにかく女性の自由時間の長さ。
 出生率を考えると、女性は家にいる時間が長いほど良い。
 貧困になった方が出生率は上がる。女性の社会進出が進んで忙しくなると下がる。
+
+合計特殊出生率は女性一人が一生に何人の子供を産んでいるか、の指標。
+単に出生率、あるいは普通出生率というと人口1000人あたりの年間出生数。`1年間の出生数 / 人口 * 1000`で算出される。
+
+合計特殊出生率が2を超えてないということは、人口が減るということ。
+
+2025年時点で合計特殊出生率が2を超えているのは223の地域のうち104の地域。
+日本は1.4で208位。
+https://eleminist.com/article/4154
