--- a/shared/voice/training/exercises/リップロール.md
+++ b/shared/voice/training/exercises/リップロール.md
@@ -1,3 +1,14 @@
+## コツ
+
+- 唇を柔らかく使う
+- 一定の息を吹きかける
+
+## 仕組み
+
+唇の間に息を吹きかけることで、唇同士が何度も当たって音が鳴る。
+
+## その他
+
 唇を振るわせて音を鳴らすストレッチ、トレーニング。
 
 普通に声を出すよりも高音を出しやすいので高音の練習にもなる。
