--- a/shared/life/生殖.md
+++ b/shared/life/生殖.md
@@ -22,3 +22,13 @@
 ただ、親を失った子が大人になるまで生き残れないと後者は諦めるしかない。
 
 「産めよ、増えよ、地に満ちよ」（旧約聖書）
+
+生殖のためには、
+
+1. 自分が生き残る
+2. 子供を作る
+3. 子供が生き残る
+
+この三つが必要。
+
+現代では、子供を作るハードルは高いけど、自分や子供が生き残るハードルは下がっている。
