--- a/shared/sex/セックス.md
+++ b/shared/sex/セックス.md
@@ -1,5 +1,8 @@
 # 性交 Sex
 
+- 社交のためのセックス
+- 生殖のためのセックス
+
 セックスは身体的なコミュニケーションチャネル。
 
 セックスの時、以下のような方法は避ける。
@@ -63,3 +66,19 @@
 相手にも性器を触ってもらう。
 前戯。
 挿入。まずはゆっくり。
+
+セックスは、ボノボみたいにオス同士の社交に使われることもある。
+ただ、性交は性病の問題があるので、まだ致命的な性病がない動物でしか広まらない。
+
+不妊や避妊の場合、子作りというよりは単に社交としてセックスしている。
+
+セックスに繋がる手段としては、
+
+- 恋
+- 愛
+- 金
+- 暴力
+
+あたり。
+
+金がないなら、愛くらいはあったほうがいい。
