--- a/shared/sex/性欲.md
+++ b/shared/sex/性欲.md
@@ -4,3 +4,13 @@
 恋人がそれを受け止めきれないなら自慰や風俗で抜くとか、最悪浮気で抜くとかすることになる。
 
 女性だけに優しくて男性に優しくない人はヤリモクなので、性欲がなくなったら優しくなくなる。でも、死ぬまで一緒にいるつもりがないなら別にそれでもいい。
+
+年を取っても性欲が強いのは、性欲が満たされてないからかも。
+若いうちはいい。むしろ若いうちに性欲を満たしておかないと年を取っても性欲に振り回される。
+
+年を取ると、あまり恋愛に必死になるのも恋愛を遠ざけてしまう。
+
+性欲の最終的な目的は子供を作ること。
+風俗とかで処理しても、子供ができないと性欲は満たされないのかも。
+
+現代社会だと、結婚せずに子供を作るのは難しい。
