--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -95,3 +95,14 @@ Lover.
 まずセックスが前提にあって、それから友人のような関係に落ち着くこともあるだけ。
 
 パートナーになれなかった恋人はペットになる場合もある。
+
+友人と恋人は分けて考える。
+一度友人として進んでしまうと恋人になるには遠回りになる。
+
+セックスするから恋人、というのはざっくり分け過ぎかも。
+社交のためのセックスは恋人よりもむしろ友人。
+
+恋人は特別扱いしないといけない。
+
+待つばかりの狩りが許されるのは、罠にかかる獲物が多い時だけ。
+そうでないなら、走って追いかけないといけない。
