--- a/shared/technology/engineering/工学.md
+++ b/shared/technology/engineering/工学.md
@@ -79,3 +79,6 @@
 工学はただ作るだけじゃなくて、売ることも入るのかも。あるいは価値を高める、という視点。
 
 UIとか使い勝手、ビジネス的な価値やリリースなんかの考え方はエンジニアリング。
+
+エンジニアリングには作るだけでなく使う面もある。
+作ったものが何かの役に立つとか、道具を使って作るとか。
