--- a/shared/pain/弱者.md
+++ b/shared/pain/弱者.md
@@ -30,3 +30,5 @@
 まぁ、伝染病や平等だけなら全員死ねば解決するけど、殺してしまうと恨みや恐れが広まるのもよくないし、経済的には弱者であっても死に過ぎると消費が減って経済全体が弱くなるし。
 
 弱者として生きるには、まず自分が弱者であることに気づいて受け入れないといけない。
+
+弱者は誰かに助けてもらえるように可愛く生きないといけない。
