--- a/shared/sex/女性.md
+++ b/shared/sex/女性.md
@@ -1,3 +1,5 @@
+# Date
+
 女性って年寄りと似てるかも。
 
 女性は好意を悪意として受け取るのでめんどくさい。
@@ -15,3 +17,5 @@ https://x.com/karasu_pua/status/1937868155831152821?s=12
 労働者として男女の価値を同じくするなら、男性の出産・育児休暇を法律で強制するくらいしかない。
 
 男は出産も授乳もできない。女より劣っている。だから、他の面で価値を示すしかない。
+
+恋愛関係になる前にデートしたりすることを英語でdatingという。デートしていて、付き合っている状態は恋人ではない。
