--- a/shared/love/tips/愛を示す.md
+++ b/shared/love/tips/愛を示す.md
@@ -1,3 +1,16 @@
+- 目を向ける
+- 体を近づける
+  - 近くの席に座る
+  - 体を触る
+- 話しかける
+- 電話やメールで連絡する
+- デートに誘う
+- 褒める
+- 贈り物をする
+- 変化に気づいて指摘する
+- 振る舞いが似てくる、癖が移る
+- 相手の言葉を拾う
+
 愛を示す、好意を示す。
 
 愛を示すのは難しい。愛はそもそも受動的なものなので、能動的に何かしたから愛があるというわけではない。それでいて普段の態度に出るものでもある。もし意識的に愛を示そうとしているとずっと気を張っていないといけない。
@@ -8,3 +21,10 @@
 
 いきなり告白するのは重い。
 いきなり告白するんじゃなくて、ほんの少しの好意を示すところから始める。話しかけたり、名前を呼んだり、会いに行ったり、何かを贈ったりする。
+
+わざとおうむ返ししたり真似したりする手法もある。
+でも、好きな相手なら勝手に似てくる面もある。
+
+好きとか好きじゃないとかの前に、嫌われているならそもそも好意を示すべきではない。
+最低でも相手から遠ざけられないことを確認してから好意を示す。
+特に、女性は男性の好意を悪意として受け取る場合がある。
