--- a/shared/sex/デート.md
+++ b/shared/sex/デート.md
@@ -3,3 +3,5 @@
 男性が女性と会うときは初めは昼にする。怖がられないように。
 
 デートは meeting の一種で、会話や体の接触、コミュニケーション、感情表現などを伴う。
+
+恋愛関係になる前にデートしたりすることを英語でdatingという。デートしていて、付き合っている状態は恋人ではない。
