--- a/shared/engagement/popular/愛される.md
+++ b/shared/engagement/popular/愛される.md
@@ -30,3 +30,7 @@
 愛を求めるのは、愛の文脈というよりも権力の文脈。
 
 特定の行動を許してもらうには、まず行動するのが先。許可を求めるのではなく、まずやってみて、拒否されたら謝る。
+
+どちらかというとPopularの文脈かも。
+
+相手を愛して、それを示す人は愛されやすい。
