--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -944,3 +944,5 @@ loveとgoodの概念は近い。
 一方が好意を向けるだけでは、繋がりが切れやすい。
 
 愛する人の愛するものを愛せないなら愛とは言えない。
+
+愛は、現状の対象をそのまま求めること。何か将来的なものに期待するのとは少し違う。影響を与えて形を変えたりするのも違う。
