--- a/shared/devotion/情熱.md
+++ b/shared/devotion/情熱.md
@@ -35,3 +35,5 @@ Passive と同じ語源。
 「夏生君は甲子園へ「行きたい」とは言わなかった。あの子は「行きます」…と断言したんです。言葉の裏に「行く」ための日々の積み重ねがきっとあるはず…。「行く」と決めている人は必ず何かを持っています。「決意」というものは一分一秒を無駄にしない。」『天のプラタナス』
 
 情熱がない方が引くべき場面で引けるとも言える。慎重になれる。
+
+エネルギーを放っている人は、周りの人にもエネルギーを与える。
