--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -946,3 +946,5 @@ loveとgoodの概念は近い。
 愛する人の愛するものを愛せないなら愛とは言えない。
 
 愛は、現状の対象をそのまま求めること。何か将来的なものに期待するのとは少し違う。影響を与えて形を変えたりするのも違う。
+
+愛は双方向のものではないが、一方的な愛は相手の重しになりやすい。
