--- a/shared/sex/女性.md
+++ b/shared/sex/女性.md
@@ -17,3 +17,5 @@ https://x.com/karasu_pua/status/1937868155831152821?s=12
 労働者として男女の価値を同じくするなら、男性の出産・育児休暇を法律で強制するくらいしかない。
 
 男は出産も授乳もできない。女より劣っている。だから、他の面で価値を示すしかない。
+
+女性は「最悪この男性に孕まされても大丈夫か」を考えて男性と接する。無意識レベルで。
