--- a/shared/trust/intimacy/友人.md
+++ b/shared/trust/intimacy/友人.md
@@ -170,3 +170,19 @@
 時間が過ぎるのが早い人、といってもいい。
 
 何かを分け合う関係。奪い合うのではなく。
+
+友人は、単に心地いいから一緒にいる。
+双方向でないといけない。お互いに心地よいと思ってないといけない。
+
+そもそも人と一緒にいることに心地よさを感じにくいというか、人といるだけでも気を張るタイプは友人を作りにくい。
+気を遣うのは良いことなので最初のハードルを越えたら急に仲良くなるタイプでもある。
+
+一人でいるよりも、二人でいるほうが心地よいなら、友人になれる。
+
+恋人は友人と違って、ただ心地よいだけではない。感情的に揺さぶられるのが心地よいとは限らない。
+でも親しくなるという点で言うと似た部分もある。
+
+人に近づきたいと思ってないと、近づきたいと思われにくい。
+
+相手から連絡が来るのが一つの指標。
+お互いに連絡を取ろうとする関係。
