--- a/shared/game/ゲーム.md
+++ b/shared/game/ゲーム.md
@@ -102,3 +102,7 @@ gameはworkと違って、何も変えないこともある。
 その上で、ゲームを終えるため、何らかの目的を達成するためのゲームと、ゲームを終わらせないように続けるゲームがある。
 たとえばテトリスで、できるだけ早く100段消す、なら前者だし、ゲームオーバーにならないように続ける、なら後者。
 ゲームを終えることが目的なら、同時に時間などが計測されることが多い。
+
+勝負は一手勝ちが理想。特に練習では、結果的に負けたとしても一手勝ちを目指す。無駄に勝ちすぎないということは、リソースを最大限効率的に使えたということだ。
+
+「勝ちたい以外に理由がいる奴は勝負に向いてない。投了したきゃいつでもどうぞ。」『龍と苺』
