--- a/shared/war/tips/恐怖を与える.md
+++ b/shared/war/tips/恐怖を与える.md
@@ -25,3 +25,5 @@
 恐怖を与えるには、結果だけを見せるよりも過程までしっかり見せるのが効果的。
 
 恐怖を与えても恨みを買ってしまうと、恐れよりも恨みの方が強い。相手が殺しにくるのは失敗。
+
+「舐められました、負けましたってちゅう訳にはいかんやろ。舐められた以上、死んでも勝たんと。」『龍と苺』
