--- a/shared/health/exercise/tips/体力をつける.md
+++ b/shared/health/exercise/tips/体力をつける.md
@@ -34,3 +34,5 @@ https://x.com/gomihitomi/status/1967427964758593829
 
 インディアンランニング:
 集団で縦に並んでランニングしながら、最後尾になったら先頭までダッシュする。
+
+体力をつけるための体力がなければ、まず日光浴から始める。こまめに水を取りながら日光に当たる。
