--- a/shared/documentation/情報を残す.md
+++ b/shared/documentation/情報を残す.md
@@ -5,3 +5,5 @@
 ドキュメンテーションではただ情報を残すだけじゃなくて、残したり、探したりがある。
 
 デザインドキュメントやインセプションデッキのような「意志決定を残す」タイプのドキュメントが一番大事。結果ではなく、背景や過程をすぐ共有できるように残す。
+
+昔は知識を残すために離噺や歌の形で言い伝えとして残していた。
