--- a/shared/game/theory/守り.md
+++ b/shared/game/theory/守り.md
@@ -28,3 +28,5 @@
 守りの目的である「攻めを切らす」ことを狙うには、消耗を最小限に抑えながら相手の資源を削らないといけない。
 
 格上と戦うには守りが重要。攻めでは勝てないからこその格上。
+
+受けるだけでは勝てないが、受け潰す、つまり、受けながら相手のリソースを削れば勝てる。
