--- a/shared/politics/争い.md
+++ b/shared/politics/争い.md
@@ -79,3 +79,5 @@ https://twitter.com/5ducks5/status/1504980931223818244
 
 恨みがなくても争いにはなる。
 特に、一つしかないものを取り合うだけで争いになる。
+
+仲がいいのに表面上は争うのも、むしろわだかまりがないからこそできること。プロレス。
