--- a/shared/voice/training/tips/喉を広げる.md
+++ b/shared/voice/training/tips/喉を広げる.md
@@ -264,3 +264,5 @@ https://youtu.be/6ppS_HSlozM?si=kcE2drhJdUFLMUyA
 頬を使って口を上に開ける練習。
 
 喉を開いて高い声を出すには、息が強くないといけない。息が強くても喉が開いていれば柔らかい声になる。
+
+呼吸の訓練で喉や鼻が鳴ってしまうのはうまく喉を開けてない。
