--- a/shared/war/武力を示す.md
+++ b/shared/war/武力を示す.md
@@ -17,3 +17,5 @@
 
 暴力を使うのは馬鹿だし、持たないのも馬鹿だ。
 武力は使ったらコスパが悪いし、持たないと侵略されても文句は言えない。
+
+武力はコスパが悪くて使いたくないが、いざというときは使わないと相手に恐怖を与えられない。刺す時には刺す、撃つ時には撃つ、と本気で思われてこそ恐怖を与えられる。
