--- a/games/Street-Fighter/差し合い.md
+++ b/games/Street-Fighter/差し合い.md
@@ -83,3 +83,9 @@ https://youtu.be/wNKJnScQduo?si=4ljViRwEFvPreHH6
 差し合いは待ちが強いけど、何もしないと相手に攻撃を当てられてドライブゲージや体力を削られる。
 
 相手の牽制を掻い潜って接近しても、安易に手を出してはいけない。相手の牽制に差し返せる距離を作った上で、相手の隙を作る。
+
+中足の外なら中攻撃を空振りしても差し返すのは難しい。
+
+キャラによっては発生が遅くても有利が取れる技を繰り返してドライブゲージを削ってくる。
+発生20Fを超えるなら見てからパリィで受けるのが無難。スト6ならリュウの鳩尾砕きや波掌拳、マリーザの溜めグラディウス、など。
+ザンギの頭突きなどは発生が比較的早くて対処が難しい。
