--- a/shared/voice/training/issues/声が通らない.md
+++ b/shared/voice/training/issues/声が通らない.md
@@ -8,7 +8,17 @@
 - 声の響きが軽い
   - 息が漏れている
   - 鼻に息が抜けている
+- 周囲の雑音と近い周波数帯で話している
 
 こもった声はなんらかの原因で音の通り道を塞いでしまっている。
 
 声の響きが軽いというのは、声に混ざっている周波数が少なくて、周りの音にかき消されやすいということ。
+
+声が聞き取りづらい、ボソボソするパターン
+
+声が小さい
+声が低すぎる
+滑舌が悪い
+語尾が尻すぼみになる
+
+https://youtu.be/x5snalDwh48?si=tJN1kwGksEkMje1z
