--- a/shared/cooking/加熱.md
+++ b/shared/cooking/加熱.md
@@ -30,6 +30,8 @@
 
 焼く前にキッチンペーパーで表面の水分を拭き取っておくと火を入れやすい。
 
+塩をかけてから焼いたり炒めたりすると水分が抜ける。きのこなど水分を残したいものは炒めてから塩をかけて仕上げる。
+
 ## 蒸す
 
 水蒸気を使って加熱する。100度で、ゆっくり熱が伝わる。
