--- a/shared/collaboration/仕事を任せる.md
+++ b/shared/collaboration/仕事を任せる.md
@@ -112,3 +112,5 @@ https://x.com/ysk_motoyama/status/1814496851703615906
 信用がない人と信用がある人は完全に分けて使うべき。
 
 仕事を誰かに任せても責任がなくなるわけではない。手を借りても頭は変わらない。
+
+AIや素人を使うのが苦手なのは、品質を担保するのが苦手なのかも。
