--- a/shared/singing/tips/キーを変えて歌う.md
+++ b/shared/singing/tips/キーを変えて歌う.md
@@ -84,3 +84,5 @@ https://note.com/atano/n/n3c01c44d8bae
 DAMの「おすすめキー」みたいな機能は歌いやすいキーというだけなので、曲の雰囲気を考えると少し高めにした方がいい場合もある。
 
 カラオケでキーを変える時は特に伴奏がしっかり聞こえるくらいのミュージック音量にしたほうがいい。
+
+舌を出したような発声で喉を下げないと出せないならキーが低すぎる。
