--- a/shared/voice/training/tips/低い声を出す.md
+++ b/shared/voice/training/tips/低い声を出す.md
@@ -5,7 +5,7 @@
 - 声帯が大きい
 - 声道が長い (≒ 身長が高い)
 
-ただし、声道は喉が上がっていると短くなる。
+声帯の大きさは変わらないが、声道の長さは喉の位置で変わる。
 最大まで喉を下げて、息を漏らさずに発声して、ようやく自分の最低音がわかる。
 
 身長165cmの男でもG2は楽に出るから、同じ身長の男でそれくらいの低音が出せないのは何かおかしい。
@@ -50,3 +50,5 @@
 つまり、同じ身長の人と同じくらい低い声が出せないなら、努力が足りてないということ。
 
 低い声を出すには、息を漏らしてはいけない。息を漏らすと声は高くなる。
+
+声帯の大きさは変わらないけど、声道の長さは喉の位置で変わる。
