--- a/shared/decision/驚き.md
+++ b/shared/decision/驚き.md
@@ -1,3 +1,5 @@
+驚きは動きを止めるための反応なので、動いた方がいい状況では驚かないように訓練しないといけない。
+
 期待や予測を外れると生じるのが驚き。
 
 過去の記憶を想起しない、新しいもの。珍しいもの。
@@ -20,3 +22,14 @@
 負の刺激はその後の「安心」がないとただ不快なだけ。「ほっ」という体験が逆に娯楽になる。
 
 驚きは新たな可能性を示してくれる。
+
+ユーモアをこすってしまうと驚きもすり減ってくる。
+
+「相手の考えを当てる」のも驚きに繋がる。
+
+サプライズは信頼ありき。
+
+驚き、サプライズはリスクと近い。
+お祝いとしてのサプライズであっても嫌いな人がいる。
+
+驚き最小の法則
