--- a/shared/trust/intimacy/親しさ.md
+++ b/shared/trust/intimacy/親しさ.md
@@ -171,3 +171,5 @@ https://gigazine.net/news/20170711-make-friends-scientific-method/
 誰かと一緒に何かをしたい、という感覚がないと他人と親しくなりにくい。
 
 自分から触りに行くより、相手から触りにくるのを誘う。
+
+親密というのは、近づかれても逃げられない距離。通常、動物は何かが近づきすぎると離れる。
