--- a/shared/voice/training/声を出すための呼吸.md
+++ b/shared/voice/training/声を出すための呼吸.md
@@ -1,4 +1,16 @@
-腹から送られてくる以上の息をつかってはいけない。
+## 鼻から吸うか口から吸うか
+
+基本的に口から吸う。
+
+声を出す時は基本的に軟口蓋を閉じるので、鼻は塞がっている。
+呼吸も基本的に口で吸ったり吐いたりした方が自然。軟口蓋をいちいち開け閉めしなくていい。それに口から吸った方がたくさん吸いやすい。
+
+## 使っていい息の量
+
+基本的に腹から送られてくる以上の息をつかってはいけない。
+横隔膜を下げて、胸郭を広げたまま使えるところまで使ったら息を吸わないといけない。
+
+## その他
 
 呼吸と声帯は一緒に鍛えないといけない。
 声帯だけを鍛えても呼吸が弱いと使いきれないし、呼吸だけを鍛えても声帯が弱いと受け止めきれない。
