--- a/shared/entertainment/tips/リアクションを大きくする.md
+++ b/shared/entertainment/tips/リアクションを大きくする.md
@@ -33,3 +33,8 @@
 反応が大きいほど、存在も大きい。
 
 反応が小さいということは、変化が小さい、愛が小さいということかも。
+
+教師やコーチは問いかけるだけじゃなくて、驚いて見せるのも大事。
+https://twitter.com/ShinShinohara/status/1664064926871322624?s=20
+
+褒めるためには、驚いてみせるという行為に落とし込むのが大事。喜びを驚きとして表現する。相手の思っていないタイミングで褒めるという原則とも関連してるかも。
