--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -90,3 +90,8 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 どれだけ好みが違ってもお互いのことが好きなら付き合っていける。
 
 好みは周りと違う方が取り合いにならない。
+
+ビジネスでもない限り、付き合いを続けたいと思わない人と付き合いを続けなくてもいい。
+ビジネスなら大切な金づるなので、お金を出してくれるなら、どんな人とでも付き合っていくほうがいい。
+
+職場などでは付き合いを続けたいと思わなくても付き合っていくことになるので、社交というよりは平和を考えることが重要になる。職場の空気をよくする。
