--- a/shared/popular/権力.md
+++ b/shared/popular/権力.md
@@ -54,3 +54,5 @@ https://x.com/ryokun_lis/status/1830932495241773189
 特定の行動を許してもらうには、まず行動するのが先。許可を求めるのではなく、まずやってみて、拒否されたら謝る。
 
 暴力を許さずに抑え続けるのは大変な労力なので、全ての暴力は権力になるのが自然。しかし、人は許さないことを抑え続けなければならない。
+
+政治というよりも人気の文脈かも。
