--- a/shared/lifestyle/cleaning/laundry/洗濯.md
+++ b/shared/lifestyle/cleaning/laundry/洗濯.md
@@ -36,3 +36,5 @@
 
 アウターもたまにはクリーニングに出したり手揉みあらいしたりして洗濯する。
 それ以外では濡れタオルやアルコールティッシュで拭くとかもある。
+
+ウールなどの毛は洗濯に弱いので、クリーニングに出すよりもブラッシングのほうがいい。あとコートなんかは単純に着ている時間が長すぎる可能性もある。着ている時間が長いものはもっと洗濯に強い化学繊維がいい。
