--- a/shared/voice/training/tips/喉を広げる.md
+++ b/shared/voice/training/tips/喉を広げる.md
@@ -266,3 +266,5 @@ https://youtu.be/6ppS_HSlozM?si=kcE2drhJdUFLMUyA
 喉を開いて高い声を出すには、息が強くないといけない。息が強くても喉が開いていれば柔らかい声になる。
 
 呼吸の訓練で喉や鼻が鳴ってしまうのはうまく喉を開けてない。
+
+喉を締めるのは息を強くするため。ホースの先っぽをつまむのと同じ。出口を狭めて一時的に息を強くする。でも、元々の息が強かったら必要ない。それに元々の息が弱いとどれだけ出口を狭めても限界がある。
