--- a/shared/training/努力.md
+++ b/shared/training/努力.md
@@ -74,3 +74,5 @@ https://www.youtube.com/watch?v=rTFLOSI5ZNI
 「人って基本的に頑張れないんですよね」（deriba）
 
 「努力は必ず報われる。報われない努力があるとすればそれはまだ努力とは言えない。」 （王貞治）
+
+強い人のそばにいるとそれが基準になるので、強い人と同じくらい練習する。いや、そばにいるためにはするしかないというべきか。しないならついていけない。まぁ、しても強さでついていけるとは限らないけど、根性を見せれば休憩中くらいは近くにいられる。
