--- a/shared/voice/training/tips/喉を広げる.md
+++ b/shared/voice/training/tips/喉を広げる.md
@@ -268,3 +268,5 @@ https://youtu.be/6ppS_HSlozM?si=kcE2drhJdUFLMUyA
 呼吸の訓練で喉や鼻が鳴ってしまうのはうまく喉を開けてない。
 
 喉を締めるのは息を強くするため。ホースの先っぽをつまむのと同じ。出口を狭めて一時的に息を強くする。でも、元々の息が強かったら必要ない。それに元々の息が弱いとどれだけ出口を狭めても限界がある。
+
+細くて強い息が使えるようになったら、自然と喉は締まらなくなる。喉を締めなくても声が出るのに慣れてくる。
