--- a/shared/engagement/熱意.md
+++ b/shared/engagement/熱意.md
@@ -26,3 +26,8 @@
 
 「この子の決意と熱量がこの世界で私をひとりにしないでくれるから嬉しかったんだ」
 『メダリスト』
+
+熱を伝えるためには、自分が熱くなるのが第一段階。その上で、相手がついてこれるように丁寧に熱を伝えないといけない。大空スバルの雑談とか、この部分が上手い。
+
+推しを語るために熱量はあったほうがいいけど、伝わらないと意味がない。「熱量がすごいね」みたいに冷静に返された時は自分だけ空回っている。
+熱量は伝えて初めて意味がある。
