--- a/shared/thinking/思考の基盤.md
+++ b/shared/thinking/思考の基盤.md
@@ -1,3 +1,5 @@
+思考が足りないと思ったら、知識が足りないと思わないといけない。
+
 見識が広いと、より良い答えも出やすい。
 抜けが少なくなる。
 
@@ -6,3 +8,5 @@
 どういう知識をその分野の思考に使うのか知っておくのも大事。
 
 思考のリソースが少なかったら、思考することを絞らないといけない。
+
+負荷の高い思考を回す前に、まず、知識をめいっぱい詰め込まないといけない。良い思考は多くの知識から生まれる。
