--- a/shared/war/戦闘.md
+++ b/shared/war/戦闘.md
@@ -19,3 +19,7 @@
 上半身への攻撃を避ける方法は、前に避けるダッキングと後ろに避けるスウェイバックがある。
 
 人同士の戦闘では人はなかなか死なないので、殺すのが目的でないなら殺す気であっても結果的に殺せずに離れることが多い。
+
+戦闘には差し合いと組み合いがあって、がっつりぶつかり合っているかどうかで決まる。肉弾戦だとお互いの攻撃が届く距離。一方でも攻撃が届かない距離で戦うなら差し合い。アウトファイト。
+槍対剣だと槍が一方的に攻撃できるのが強み。射程の短い方はまずインファイトに持ち込まないと攻撃できない。銃はさらに射程が長い。
+お互いが銃を持っていると遠くてもある種の組み合いになっている。お互いの銃の射程に入ったらもう インファイト。隠れながら相手への射線を確保して一方的に攻撃できるかどうかが差し合いになる。牽制して相手の動きを誘導したり、罠を仕掛けておいたりすると有利に展開できる。
