--- a/games/shogi/将棋.md
+++ b/games/shogi/将棋.md
@@ -18,3 +18,7 @@ AIの将棋はもはや薄い囲いから先に入玉してそのまま押しつ
 
 将棋では駒がぶつかり始めてからを「中盤」と呼ぶ。
 「終盤」には明確な境界がないけど、だいたいどちらかに天秤が傾いて終局が見えてきたあたり。
+
+入玉するとほぼ詰まないのは、金銀桂香歩が後ろに弱いから。ほとんど飛角だけで詰まさないといけない。
+
+序盤の駒組みでも相手がミスったら攻められるように牽制しないといけないし、自分も相手の牽制に対してミスらないように受けないといけない。
