--- a/shared/game/theory/差し合い.md
+++ b/shared/game/theory/差し合い.md
@@ -16,3 +16,12 @@
 ただ、あえて間合いギリギリを出入りして誘うのも手ではある。リスクを取って差し返しを狙う。
 
 相手の動きに合わせるのではなく、相手の動きを誘う。釣る。フェイントで。
+
+差し合いはfightの文脈か。戦闘。
+
+差し合いだけでなく、組み合いを制する。
+
+格ゲーは何度も差し合いに戻るけど、将棋は基本的に序盤で差し合いして、あとは攻守を入れ合えながら組み合いになる。
+
+戦いの細かいところではgameの文脈になる。
+差し合い、牽制、懲罰、挑発、など。
