--- a/shared/game/ゲーム.md
+++ b/shared/game/ゲーム.md
@@ -106,3 +106,13 @@ gameはworkと違って、何も変えないこともある。
 勝負は一手勝ちが理想。特に練習では、結果的に負けたとしても一手勝ちを目指す。無駄に勝ちすぎないということは、リソースを最大限効率的に使えたということだ。
 
 「勝ちたい以外に理由がいる奴は勝負に向いてない。投了したきゃいつでもどうぞ。」『龍と苺』
+
+ゲームは抽象概念で、戦いもゲームとして捉えられる。
+戦闘や戦略は戦いの細かい部分。戦闘は特に具体的なので、個別に扱ってもいいかも。リアルファイトも格闘ゲームも戦闘。銃撃戦なんかも理論は同じ。
+
+勝負というよりは駆け引きが近い。
+勝ち負けがあるものというよりも、その過程で生じる駆け引きがゲーム。対戦ゲームも協力ゲームもある。
+協力ゲームの駆け引きだと、より成果を効率化するために自分はタイミングよく引いて仲間がダメージを稼ぐとか。
+
+戦争とゲームの違いはどこにあるか。命がかかってなくても戦争ではある。いや、戦いと争いをまず区別するべきなのかも。
+ゲームは手段というか、戦争の中の戦いの部分のさらに抽象。でも、戦争には争いの面もある。争いがあるから戦いがある。
