--- a/shared/human/mind/心.md
+++ b/shared/human/mind/心.md
@@ -55,3 +55,6 @@ mind は「いつも考えている、気にしている」イメージ。
 弱いのは本当に心なのかな？
 
 心が弱いって言ってる人はその前に頭が弱い。自分に言ってる人も他人に言ってる人も。
+
+mindは心の機能全般を指して、mentalityは特定の傾向を指す。
+mentalは精神的な健康状態などの状態を指す。healthの文脈？
