--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -291,3 +291,5 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 声を出すのに息の量は要らない。
 
 まず息の圧を声帯にかけて、それからゆっくり声帯を開いていく練習。
+
+地声を鍛える場合でもあまり声が重くなりすぎないようにしたい。良い出し方で、重い声も軽い声も出せるようにする。
