--- a/shared/voice/training/tips/声帯を鳴らす.md
+++ b/shared/voice/training/tips/声帯を鳴らす.md
@@ -13,3 +13,8 @@
 
 最初は息が少ない状態に慣れてなくて安定しないことがある。あと圧も足りないことが多い。
 声帯をよく鳴らせるようになったら、声の震えを解消して安定した地声を出せるようにする。
+
+息が強くなったら、声帯はゆるくていい。
+息が強くなるほど、声帯は柔らかく使える。
+
+呼吸を鍛えたら、声帯は緩めていく。そのままだと声が強く重くなりすぎる。
