--- a/shared/music/曲の分類.md
+++ b/shared/music/曲の分類.md
@@ -1,10 +1,14 @@
 持ち歌の整理、あるいは曲の分類
 
-- 男声、女声
-- ソプラノ、アルト、テノール、バス
-- 地声、裏声
-- ソロ、デュエット、ハモリ、かけあい
-- 季節感
-- ムード: しっとり、わいわい
-- テンポ: 速い、遅い
-- キー: 高い、低い
+- 全体
+  - 季節感
+  - ムード: しっとり、わいわい
+  - テンポ: 速い、遅い
+  - キー: 高い、低い
+- ボーカル
+  - ソロ、デュエット、ハモリ、かけあい
+  - 歌詞
+  - 男声、女声
+  - ソプラノ、アルト、テノール、バス
+  - 地声、裏声
+- 楽器
