--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -95,3 +95,15 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 ビジネスなら大切な金づるなので、お金を出してくれるなら、どんな人とでも付き合っていくほうがいい。
 
 職場などでは付き合いを続けたいと思わなくても付き合っていくことになるので、社交というよりは平和を考えることが重要になる。職場の空気をよくする。
+
+人との関係を維持する、人付き合いを維持するのが社交の基本。
+
+社交の一つ目のハードルは、そもそも誰と付き合っていくか。
+あらゆる人と付き合うのは厳しい。人によっては付き合っていける人数の許容量がごく小さい場合もある。
+
+「この人と関係を続けたい」と判断するのが第一歩。人を好きになる。
+
+「相手が誰でもいい」ってことを増やす。好きなものの布教をするとか。まず自分の都合を押し付けるところから始める。
+
+同じくらいの熱量の趣味を持っていると付き合っていきやすい。
+同じ仕事を趣味にしてるとか、同じゲームをやりこんでるとか。あるいはボードゲームみたいにその場でできるゲームをするとか。
