--- a/shared/trust/intimacy/tips/誰かと親しくなる.md
+++ b/shared/trust/intimacy/tips/誰かと親しくなる.md
@@ -126,3 +126,7 @@
 誰かの話を聞いて「ふーん」ってなるけど、親しくなりたいなら「手伝わせて！」でもいい。
 
 誰かと親しくなりたいと思うことはわりと少ないけど、べつに友人にならなくても知人と親しくなっておいて損はないと思う。まあ、ストーカーとか極端な関係になることもまずないし。
+
+親しくなる機会を逃さない。
+誘いに乗るとか、こっちから誘うとか。
+あと「XXに行きたい」「XXしたい」みたいな話をすぐ拾って予定を決めるとか。
