--- a/shared/trust/intimacy/親しさ.md
+++ b/shared/trust/intimacy/親しさ.md
@@ -173,3 +173,5 @@ https://gigazine.net/news/20170711-make-friends-scientific-method/
 自分から触りに行くより、相手から触りにくるのを誘う。
 
 親密というのは、近づかれても逃げられない距離。通常、動物は何かが近づきすぎると離れる。
+
+親しくなるためにどうするか。どうやって距離を近づけるか。
