--- a/shared/discussion/議論.md
+++ b/shared/discussion/議論.md
@@ -96,3 +96,6 @@ Assertion も参照。
 「言い返せなくて草」
 
 議論するときは、議論するレイヤーを揃えないといけない。家を建てる話をしていて、一方は基礎工事の話をしているのにもう一方がドアの装飾の話をしていたら議論とは言えない。
+
+議論自体は会議の過程。
+わざわざ議論するのは、何かを決めるため。何も決まらない議論は飲み会とかでやればいい。
