--- a/shared/singing/tips/ミックスボイスは気にしない.md
+++ b/shared/singing/tips/ミックスボイスは気にしない.md
@@ -1,3 +1,5 @@
+ミックスボイスは妥協。
+
 ミックスボイスは意識せずに、とにかく低音から高音を滑らかに繋げられるようにする。
 低音から高音を滑らかに繋げられた時の中間の部分をミックスボイスと呼ぶだけ。
 
@@ -14,10 +16,15 @@
 ただ、凡人がそうしても裏返るので、初めから息をある程度漏らして裏返して響きを揃えるのがいわゆるミックスボイス。はっきり言えば妥協でしかない。
 どうせ練習するならミックスボイスではなく地声の範囲をただ広げれば良い。声帯を伸ばして、強い呼吸で歌う。
 
-ミックスボイスは妥協。
 声帯を伸ばして高い声が出ないから声帯に力を入れて、そのままでは硬い声になるから息を混ぜて硬さを抑えている。
 
 声が裏返るのを誤魔化すのが上手くなるよりも前に、そもそも裏返らないように鍛えるべきではある。
 ただ、裏声を誤魔化す方が簡単なので、まずは誤魔化せるようになっておいて、練習では裏返らないようにじっくり鍛えていくのも悪くはない。裏返らないように鍛えるのは時間がかかる。
 
 ミックスボイスは練習時間が少ない人向けの小手先のテクニックなので、その練習に時間をかけるのでは元も子もない。時間をかけずに使えるからこそ意味がある。
+
+ミックスボイスは声が硬いまま強くするとキンキンするので息を漏らして無理やり柔らかくしている。
+ちゃんと鍛えれば、ミックスボイスでなくても、喉を下げて、強くても柔らかい声が出せる。
+
+ミックスボイスはインスタントみそ汁みたいなもの。
+便利ではあるけど、そればっかりでは本当の声が育たない。
