--- a/shared/health/tips/風邪の治し方.md
+++ b/shared/health/tips/風邪の治し方.md
@@ -1,3 +1,14 @@
+- こまめに水を飲む
+- こまめに替える
+  - タオル
+  - コップ
+  - マスク
+- 眠れなくても布団で体を温める
+- 熱が下がってきても汗をかくまで油断しない
+- 38度を超えたら熱を下げる
+- 咳は我慢するか、咳止めを飲む
+- 咳をしたら喉を壊さないように水を飲む
+
 風邪はとりあえず家で安静にする。
 
 基本的に、病院には行かなくていい。
@@ -78,3 +89,5 @@
 鼻が熱っぽいとき、鼻というより喉の炎症の場合がある。龍角散とか喉の薬で改善する場合があるので試してみるといいかも。
 
 寒気がするくらいなら生姜をたくさん入れたスープとか飲むと体が温まる。
+
+風邪の時の咳は無駄に喉を壊すだけなので止めていい。
