--- a/shared/cooking/料理.md
+++ b/shared/cooking/料理.md
@@ -39,3 +39,5 @@
 料理ができない人って見たことないんだけど存在するのかな。
 
 結婚式とかで良さげな料理が出てきてもポテチの方が美味いまである。人の営みなど、糖と油の前では無力なのだ…
+
+一万円を超える料理は味よりも歴史や技術の文脈を楽しむ料理になって、勉強しないと楽しめないらしい。
