--- a/shared/health/tips/風邪の治し方.md
+++ b/shared/health/tips/風邪の治し方.md
@@ -8,6 +8,7 @@
 - 38度を超えたら熱を下げる
 - 咳は我慢するか、咳止めを飲む
 - 咳をしたら喉を壊さないように水を飲む
+- 洟はすすらない
 
 風邪はとりあえず家で安静にする。
 
@@ -91,3 +92,13 @@
 寒気がするくらいなら生姜をたくさん入れたスープとか飲むと体が温まる。
 
 風邪の時の咳は無駄に喉を壊すだけなので止めていい。
+
+風邪のときはコップも紙コップをどんどん使い捨てるのが楽かも。
+
+風邪をひいたら、早く完全に治すのと同時に、治った後にダメージを残さないのが大事。特に喉。
+
+風邪のときは栄養をしっかり摂るけど、脂肪は要らない。プロテインとかウィダーで栄養をカサ増しするのもいい。
+
+風邪のときは病院に行っても悪化するだけなので、対症療法で耐えるのが基本。
+
+落ち着いたら片っ端から触ったものを取り替えたりアルコールで処理していく
