--- a/shared/voice/training/tips/喉を広げる.md
+++ b/shared/voice/training/tips/喉を広げる.md
@@ -270,3 +270,5 @@ https://youtu.be/6ppS_HSlozM?si=kcE2drhJdUFLMUyA
 喉を締めるのは息を強くするため。ホースの先っぽをつまむのと同じ。出口を狭めて一時的に息を強くする。でも、元々の息が強かったら必要ない。それに元々の息が弱いとどれだけ出口を狭めても限界がある。
 
 細くて強い息が使えるようになったら、自然と喉は締まらなくなる。喉を締めなくても声が出るのに慣れてくる。
+
+喉が締まるのは喉の奥が狭くなっていて、それとは別に声帯に力が入って硬くなる問題もある。
