--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -808,3 +808,5 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 
 やりたいことよりも、できることをビジネスにする。
 やりたいこととできることが一致するとなお良い。
+
+贈り物をしたり、誰かを喜ばせたりする感覚がビジネスの基礎になる。
