--- a/shared/family/children/育児.md
+++ b/shared/family/children/育児.md
@@ -79,3 +79,5 @@ https://x.com/shiroku__mama/status/1963543241292136671?s=12
 七五三で7歳まで成長を祝うのもそのため。
 
 「幼子にとって親は、世界の全てに等しい存在です」『継母の心得』
+
+子が弱いから殺す、というのは自然ではないが、子育てを放棄することはある。弱かったら自然と死ぬだけで、育児放棄は子に割くリソースを抑えて親や他の子どもが生き残るため。
