--- a/shared/health/tips/風邪の治し方.md
+++ b/shared/health/tips/風邪の治し方.md
@@ -1,4 +1,13 @@
-- こまめに水を飲む
+## 要点
+
+風邪をひいたら、早く完全に治すのと同時に、治った後にダメージを残さないのが大事。特に喉。
+
+風邪のときは病院に行っても悪化するだけなので、対症療法で耐えるのが基本。
+
+## 方針
+
+- 病院には行かなくていい
+- 水をたくさん飲む
 - こまめに替える
   - タオル
   - コップ
@@ -9,6 +18,29 @@
 - 咳は我慢するか、咳止めを飲む
 - 咳をしたら喉を壊さないように水を飲む
 - 洟はすすらない
+- 冬は部屋を温める
+- 冬は加湿する
+- 総合感冒薬、いわゆる風邪薬は使わない（余計な成分が多いので、症状に応じて必要な薬だけ飲むべき）
+
+## 風邪になる前に常備しておくもの
+
+- 保存食、特に流動食やプロテイン（喉が痛くても栄養が取れる）
+- 熱冷まし（高熱を抑える）
+- 鼻炎薬（鼻の詰まりを抑える）
+- 鼻うがい（鼻の詰まりを抑える、乾燥を防ぐ）
+- 喉薬、あるいはのど飴やはちみつ（喉の痛みや咳を抑える）
+- 胃薬
+- 柔らかいティッシュ（鼻の肌荒れを防ぐ）
+- ワセリン（鼻の肌荒れを防ぐ）
+- 冷えピタや氷枕
+
+## 風邪が治ったら
+
+- 触ったところをアルコール消毒する
+- 衣類を洗う
+- 食器を洗う
+
+## その他
 
 風邪はとりあえず家で安静にする。
 
@@ -27,18 +59,6 @@
 熱冷ましで熱が下がっても鼻水が出る間は油断しないこと。
 
 個人的には汗をかいたらだいぶ治ってきている感覚。
-
-常備しておくと良いもの:
-
-- 保存食、特にウィダーインゼリー（喉が痛くても栄養が取れる）
-- 熱冷まし（高熱を抑える）
-- 鼻炎薬（鼻の詰まりを抑える）
-- 鼻うがい（鼻の詰まりを抑える、乾燥を防ぐ）
-- 喉薬、あるいはのど飴やはちみつ（喉の痛みや咳を抑える）
-- 胃薬
-- 柔らかいティッシュ（鼻の肌荒れを防ぐ）
-- ワセリン（鼻の肌荒れを防ぐ）
-- 冷えピタや氷枕
 
 熱冷ましで胃が荒れるようなら胃薬もあるといい。
 
@@ -68,8 +88,6 @@
 
 風邪が治ったら掃除と洗濯。要所にアルコール消毒もしていく。床や水回り。
 
-総合感冒薬、いわゆる風邪薬は使わない。余計な成分が多い。症状に応じて必要な薬だけ飲む。
-
 風邪の時でも風呂は体が温まるけど、体が冷えたり、長風呂して体力を使ったりするのは良くない。多めにお湯を張って、5分くらいで出る。
 
 風邪の後とか、咳と痰が出る時は、鼻から出し切るのが大事。とにかく鼻をかむ。鼻が荒れないように高いティッシュを使って、たまにワセリンを塗る。
@@ -95,10 +113,6 @@
 
 風邪のときはコップも紙コップをどんどん使い捨てるのが楽かも。
 
-風邪をひいたら、早く完全に治すのと同時に、治った後にダメージを残さないのが大事。特に喉。
-
 風邪のときは栄養をしっかり摂るけど、脂肪は要らない。プロテインとかウィダーで栄養をカサ増しするのもいい。
-
-風邪のときは病院に行っても悪化するだけなので、対症療法で耐えるのが基本。
 
 落ち着いたら片っ端から触ったものを取り替えたりアルコールで処理していく
