--- a/games/shogi/将棋.md
+++ b/games/shogi/将棋.md
@@ -22,3 +22,5 @@ AIの将棋はもはや薄い囲いから先に入玉してそのまま押しつ
 入玉するとほぼ詰まないのは、金銀桂香歩が後ろに弱いから。ほとんど飛角だけで詰まさないといけない。
 
 序盤の駒組みでも相手がミスったら攻められるように牽制しないといけないし、自分も相手の牽制に対してミスらないように受けないといけない。
+
+序盤で隙があると急戦になる。
