--- a/shared/computer/software/development/ソフトウェア開発.md
+++ b/shared/computer/software/development/ソフトウェア開発.md
@@ -215,3 +215,6 @@ https://tech.willgate.co.jp/entry/2024/04/01/184252
 
 ソフトウェア開発は工業よりも工芸に近い。
 工業が必要なのは量産が必要だからで、ソフトウェアに量産は必要ない。一般的な工学的管理手法はあまり良くない。
+
+ソフトウェア開発はなんらかの仕事を代わりにやってるのが本質。
+人間の代わりに仕事してくれるソフトウェアを作る。注文であったり、事務処理であったり。
