--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -375,3 +375,5 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 ただ、数十年くらいだと足りない。
 
 練習のベースとして、まず癖を抜く、「守」の工程が第一。
+
+練習していることはいつかできればいい。
