--- a/shared/economy/経済.md
+++ b/shared/economy/経済.md
@@ -1,3 +1,5 @@
+# Economy
+
 生産と消費を調整する活動。
 
 経済としては需要と供給、生産と消費まで。
@@ -48,3 +50,5 @@
 ただ、海外に逃亡されると追うのが難しい。
 
 経済は成長しなければならない。それは小さな会社であっても同じ。
+
+経済自体は生産と消費の調整で、ビジネスとか商売がその中で生じるけど、付随的なもの。
