--- a/shared/work/作用.md
+++ b/shared/work/作用.md
@@ -1,4 +1,4 @@
-# 作用
+# Work
 
 仕事によってどのような影響を与えるか。
 
@@ -12,3 +12,5 @@ art も作用を生じるけど、意図しているとは限らない。
 作用ばかりを目指して表から見えにくい部分を蔑ろにすると内部が腐ってしまう。
 
 「早く行きたければ一人で行け、遠くへ行きたければみんなで行け」
+
+Influenceよりも直接的に何らかの結果を生み出すニュアンス。
