--- a/shared/influence/影響.md
+++ b/shared/influence/影響.md
@@ -34,3 +34,7 @@ influence は間接的で影響を与えるもの。
 変わるかどうかはわからないけど、影響する、作用するのがまずある。
 
 変化に指向性を持たせて、都合の良い変化をもたらす。
+
+直接働きかけるというよりは、じっくりと時間をかけて伝播させる。
+
+影響には作用よりも時間がかかる。
