--- a/shared/work/作用.md
+++ b/shared/work/作用.md
@@ -1,5 +1,9 @@
 # Work
 
+エネルギーを使うこと。
+
+機能、作用。
+
 仕事によってどのような影響を与えるか。
 
 どのように変化するか。
@@ -14,3 +18,14 @@ art も作用を生じるけど、意図しているとは限らない。
 「早く行きたければ一人で行け、遠くへ行きたければみんなで行け」
 
 Influenceよりも直接的に何らかの結果を生み出すニュアンス。
+
+作用は、変化の文脈というよりもachievementが近いかも。何らかの結果を生じること。
+
+変化させるだけでなく、変化させずに支えたりするのもworkに含まれる。
+
+- 変化させる
+- 変化させない (維持する)
+
+広義で言うとエネルギーというのも少し違うかも。能力。能力を使う。例えば土地で野菜を作ったりするのも、栄養などのエネルギーを取り出しているとも考えられるし、野菜を作る能力を土地から取り出しているとも考えられる。
+
+この文脈のコアになるのは、機能、能力、資源、あたりか。
