--- a/shared/documentation/tips/ナレッジの整理.md
+++ b/shared/documentation/tips/ナレッジの整理.md
@@ -79,3 +79,6 @@ explanationは、原則としてどうするか、なぜそうするか、どの
 ナレッジとまとめるときにどういうトピックがあるか、どの単位で記事にするかは重要。見出しをよく考える。
 
 ナレッジで重視しているのは、知識の関連性。親子関係とか、基礎と応用とか。
+
+ナレッジをまとめるのはあくまでも実用のため。
+ナレッジをまとめるのが楽しくなってそればっかりになっても意味がない。経験は減らさない。
