--- a/shared/popular/社会的影響.md
+++ b/shared/popular/社会的影響.md
@@ -1,5 +1,3 @@
-人気。
-
 ビジネスの根本は社会や他人に影響を与えること。変化させること。社会に対する貢献、仕事。
 
 相手をどのように変えるか。
@@ -13,3 +11,5 @@
 
 良い影響、貢献だけが影響ではない。
 社会に悪い影響を与えるビジネスもある。
+
+社会的影響を与えるのは、人気、技術革新、など。人気だけではないか。
