--- a/shared/service/サービス.md
+++ b/shared/service/サービス.md
@@ -102,3 +102,10 @@
 海外企業のサービスは軽微なバグが一生直らない。商業的に優先度が低いものは無視されてる。
 
 代理で取引を行うのはエージェント。これもサービスの一種。
+
+価値を提供するServerと、要求するClientに分かれる。
+
+生産と消費はサービスとはまた別、経済の文脈。
+
+ビジネスの中で価値を提供することはあるけど、ビジネスそのものではない。でもビジネスの社会貢献と価値の提供は近い。
+ビジネスは結果的に価値の提供になることが多いけど、それだけではない。
