--- a/shared/mood/tips/態度が悪い人を排除する.md
+++ b/shared/mood/tips/態度が悪い人を排除する.md
@@ -9,3 +9,7 @@
 
 大勢いるところでやたら携帯を触ったりしてつまらなそうにしてる人は雰囲気悪くなるし、雰囲気悪くなったのを他人のせいにするタイプだから関わるべきではない。
 そもそも態度が悪い人は、空気を悪くする人。積極的に排除する。
+
+態度が悪い人を排除するために空気が悪くなってはいけない。うまく排除する。
+
+態度が悪い人は輪の外に出るように割り込んだり、背を向けたりして自然に排除する。
