--- a/shared/mood/態度.md
+++ b/shared/mood/態度.md
@@ -6,3 +6,14 @@
 
 相手が嫌がっていても話を続けるべきかどうか。
 個人的には話しかけられると面倒だけど、場の空気としては良くなる場合もあるし、慣れると態度が軟化することもあるので状況次第ではある。
+
+どういう態度が良いのか、あるいは悪いのか。
+
+## 良い態度
+
+- 体を相手の方に向けて話を聞く
+
+## 悪い態度
+
+- キョロキョロして落ち着かない
+- 携帯を触ったりして話を聞いていない
