--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -501,3 +501,5 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 > 『四月は君の嘘』
 
 「突然現れた得体の知れない隣人が人の心を掴むには『愛（ものがたり）が必要』ということよ」『悪役令嬢の中の人』
+
+信頼は信じることよりも頼ることがベース。
