--- a/shared/care/関心.md
+++ b/shared/care/関心.md
@@ -166,3 +166,6 @@ respectはcareのベースになる。respectしてないとcareもしない。
 関心の対象はあらゆるものに向けられる。
 
 何かに興味を持つ、好奇心を持つというのはどういうことか。
+
+careの関心は注意の方が近いかも。mindとも近い。
+信頼していないものに注意する、警戒するのもcareの一部。
