--- a/shared/collaboration/organization/hierarchy/上司の仕事.md
+++ b/shared/collaboration/organization/hierarchy/上司の仕事.md
@@ -94,3 +94,5 @@
 上司にも得意不得意があるので、メンタルケアが強い上司にはメンタルがカスの部下をつけるとか、適性に合わせないといけない。
 
 上司に必要なのは部下のエンゲージメントを高めること。それだけ。ただ、部下によってはエンゲージメントのために知性や教養、技術、実績などを求めることはある。
+
+上司が部下の気力を損なってはいけない。
