--- a/shared/commerce/商業.md
+++ b/shared/commerce/商業.md
@@ -101,3 +101,6 @@ https://x.com/BuzzLogicCEO/status/1813015524546342978
 新規顧客を雑に増やしてもリピーターにならないと一時的な収入にしかならない。新規顧客を増やすなら、同時にそれをリピーターに変える方策も必要。
 
 飲食店とか消え物の利点は、次々と新しい商品を出さなくても長く売れること。飽きられることはあっても、家電みたいに一度買うと何年も買う必要がなくなることはない。
+
+商売でも用より愛。
+推しグッズを何個も買い集めるのは用では説明できない。機能は基本的に一個あれば満たせる。
