--- a/shared/decision/気力.md
+++ b/shared/decision/気力.md
@@ -1,5 +1,8 @@
 # 気力
 
+- 行動力
+- 注意力
+
 意思決定する、行動するための仮想的な力を気力という。
 
 気力もまた疲労によって消耗する。
@@ -26,3 +29,5 @@
 判断しないといけないことがあると気力を消耗する。
 
 頭を使うと糖分を消化して気力が落ちる。気力とは糖分である。
+
+気力を損なうと、ミスが増えたり、手を抜いたりする。
