--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -948,3 +948,5 @@ loveとgoodの概念は近い。
 愛は、現状の対象をそのまま求めること。何か将来的なものに期待するのとは少し違う。影響を与えて形を変えたりするのも違う。
 
 愛は双方向のものではないが、一方的な愛は相手の重しになりやすい。
+
+愛には影響力がある。workではないけど、他人の好きなものを好きになったりする。
