--- a/shared/work/力.md
+++ b/shared/work/力.md
@@ -35,3 +35,5 @@ https://chat.openai.com/share/95eec5c2-1411-4c14-a703-3e3b9e9f8ab9
 高さは重さだ。
 
 力には重さと速さが必要。
+
+workにおける力はforceというよりenergyかも。動力、エネルギー、エナジー。
