--- a/shared/entertainment/examples/ギャンブル.md
+++ b/shared/entertainment/examples/ギャンブル.md
@@ -27,3 +27,6 @@
 ギャンブルはリスクを負うからこそ楽しい。
 そこに楽しみを見出せないならギャンブルはしないほうがいいし、楽しめるならハマるのでギャンブルはしないほうがいい。
 ギャンブルをしていいのはギャンブル自体に価値を見出さない人。馬が好きだから競馬でついでに賭けるとか。
+
+ギャンブルで確実に勝つ方法は、胴元になること。
+お金を集めて、ほんの少しだけ手数料を抜いて、あとは勝った人で山分けしてもらう。
