--- a/shared/joke/ボケ.md
+++ b/shared/joke/ボケ.md
@@ -159,3 +159,6 @@ https://youtu.be/CCRQb6UxWC8?si=I5Y8SEUZ3IizFffF
 代名詞的な連想のネタがたくさんあるとボケやすい。
 
 シュールなボケは、雑談に使うには人を選びすぎる。
+
+ボケが上手い人はまずフリが上手い。
+偶発的なアクシデントが起きそうなところでもフリを入れておくとなお良い。
