--- a/shared/society/tips/大人と小人の違い.md
+++ b/shared/society/tips/大人と小人の違い.md
@@ -21,3 +21,5 @@
 開発チームによって「大人」に求められる水準は違う。分業的なチームと自己組織化されたチームとでは、後者の方が難しい。
 
 大人になったら嫌なものを切り捨てるのも自由。それで不利益があっても自分が責任を負う。
+
+大人扱いされるには社交を身につけないといけない。人との関係を続けるという姿勢が必要。
