--- a/shared/human/being/well/安心.md
+++ b/shared/human/being/well/安心.md
@@ -16,3 +16,7 @@ Peace of mind
 何から安心を得るか。
 
 不安を取り除くことで安心が得られる？
+
+安心が必ずしも安全ではないけど、不安を抱えたままだと脳のリソースが削られる。無駄な不安は取り除いた方がいいし、必要な不安はさっさと対策した方がいい。
+
+安心は、脳のリソースを削らないために目指すもの。
