--- a/shared/human/being/well/愛情.md
+++ b/shared/human/being/well/愛情.md
@@ -29,3 +29,5 @@ https://gigazine.net/news/20230711-lonely-peoples-brains-work-differently/
 
 過干渉は、情があっても愛がない。
 恩知らずは、愛があっても情がない。
+
+愛の観点では支配するなら愛とは言えないが、情の観点では情を持ちながら支配することもありうる。相手を守るための支配や監視。
