--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -107,3 +107,5 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 
 同じくらいの熱量の趣味を持っていると付き合っていきやすい。
 同じ仕事を趣味にしてるとか、同じゲームをやりこんでるとか。あるいはボードゲームみたいにその場でできるゲームをするとか。
+
+社交で大事なのは謝意。関係を続けようとする気持ち。
