--- a/shared/study/勉強嫌い.md
+++ b/shared/study/勉強嫌い.md
@@ -1,2 +1,6 @@
 「学校で何習ってるか教えてよ」とか、
 「次会うまでにまた新しいこと覚えて教えてよ」とか、期待するのが大事なのかも。
+
+「勉強が嫌い」と言っているのは、本当に勉強が嫌いとは限らない。学校が嫌いか、教師が嫌いか、教科が嫌いか。
+もし本当に勉強が嫌いなら、好きなことを本気でやりこんで、そこで学んだ効率的で楽な方法でどれかの教科を攻略してみるといいかも。
+学校が嫌いならサークルやクラブに参加して学校以外に好きな場所を作ってもいいし、教師が嫌いなら無視して教科書や参考書を買って一人で進めてもいいし、教科が嫌いならそれこそ好きなことと同じ攻略法が使えることが多い。
