--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -92,3 +92,7 @@ Mercy、情、情け、赦し、恵み。
 道具を長く使うのもcareの一種。
 
 メンテナンスしながら長く使っているものには情が移る。
+
+Careの視点で言うと、どこまでのおせっかいがちょうどいいか。あるいは上限などないのか。監禁して日常生活の全てを代わりにするのはやりすぎかどうか。まぁ、Careの観点はいいけど、Loveの観点では監禁するのはやりすぎ。基本的に現在の対象の価値を認めるのが愛。過不足はないと考えるべきで、何か支配しようとするなら愛ではない。
+
+世話好きで、お節介なのはCareの観点からすると良い。
