--- a/shared/community/公共.md
+++ b/shared/community/公共.md
@@ -1,4 +1,8 @@
+# Community
+
 公共の場で周囲の迷惑を考えずに検証もできない自分の意見を通そうとするなら、単に排除すればよい。
 
 公的な事柄は公共の利益を優先するので、形式的に行われることが多い。
 暗黙的、明示的なルールに従う。
+
+共同体で重要なのは、「公共」という考え方。共通の利益やその基礎にある共通の価値観。
