--- a/shared/peace/平和.md
+++ b/shared/peace/平和.md
@@ -57,3 +57,8 @@ Moodがベースかも。
 和を乱さない。
 
 平穏と不穏
+
+peaceはsecurityと統合してもいいかも。平安、平穏と安心、安全。
+むしろpeace/securityみたいにする？ただ、peaceは主観的。
+
+安心感や快感を与えてくれるのも用ではあるけど、愛に近い。
