--- a/shared/work/仕事.md
+++ b/shared/work/仕事.md
@@ -341,3 +341,12 @@ workとinfluenceは近い。
 Workは「働き」とでも言ったほうがいいかも。
 
 悪事を働くのも働きではある。
+
+仕事には何らかの意味がある。
+
+workは意味の文脈、loveは価値の文脈。
+用があるのか、愛があるのか。
+
+愛があれば用がなくてもいい。
+
+意味とは機能や作用のこと。
