--- a/shared/popular/権力.md
+++ b/shared/popular/権力.md
@@ -58,3 +58,5 @@ https://x.com/ryokun_lis/status/1830932495241773189
 暴力を許さずに抑え続けるのは大変な労力なので、全ての暴力は権力になるのが自然。しかし、人は許さないことを抑え続けなければならない。
 
 政治というよりも人気の文脈かも。
+
+自分に人気がなくても人気者の脛をかじることで権力を得ることがある。
