--- a/shared/influence/people/人を動かす.md
+++ b/shared/influence/people/人を動かす.md
@@ -24,3 +24,7 @@
 女性には「いつもどれだけ助けられているか」「どれだけ一緒にいたいと思っているか」をうまく伝える。
 
 計算高いのは別に部下でもできる。上司は情が強くないといけない。
+
+モテること、人気になること、参加させること、楽しませること、誘うこと、なども人を動かしている。
+
+SNSなどで間接的に情報を得て影響を受けることもある。
