--- a/shared/influence/people/説得.md
+++ b/shared/influence/people/説得.md
@@ -119,3 +119,5 @@ Assertion も参照。
 交渉では納得できない場合もある。
 
 「地道に、こつこつ、一歩ずつ。…新しいものを認めさせるのに近道はないよ。自分の主張を通すにはまず相手をこちらへ招待するところからだ。奇抜なだけの人間として一瞬で消費されてしまわないためにもね。」『ブレス』
+
+理によって人を動かすのは難しい。
