--- a/shared/work/力.md
+++ b/shared/work/力.md
@@ -37,3 +37,5 @@ https://chat.openai.com/share/95eec5c2-1411-4c14-a703-3e3b9e9f8ab9
 力には重さと速さが必要。
 
 workにおける力はforceというよりenergyかも。動力、エネルギー、エナジー。
+
+戦いや狩りは力の領分。
