--- a/shared/engagement/エンゲージメント.md
+++ b/shared/engagement/エンゲージメント.md
@@ -331,3 +331,5 @@ engagementはcommunicationや trustと関わりが深い。
 「馬鹿ども」とか「韓国人」とか、いろんなものをグループとして括り出すと、自分をそこから排除してしまう。認知上の所属が減る。
 
 組織や国家のように曖昧なものにエンゲージメントを向けるのは難しい。だからこそ、「人」が旗印にならないといけない。
+
+エンゲージメントとか、参加させる、という概念は、リソースを割かせる、責任を負わせる、ということ。
