--- a/shared/influence/people/人を動かす.md
+++ b/shared/influence/people/人を動かす.md
@@ -28,3 +28,9 @@
 モテること、人気になること、参加させること、楽しませること、誘うこと、なども人を動かしている。
 
 SNSなどで間接的に情報を得て影響を受けることもある。
+
+どういう人に動かされるか。
+
+感動、利益、理屈、信用、信頼、愛情、なんかは人が動くきっかけ。
+
+推し活なんかも人を動かす活動。
