--- a/shared/sex/性的魅力.md
+++ b/shared/sex/性的魅力.md
@@ -4,3 +4,6 @@
 
 太っていることが富の象徴であったり、富裕層の服装の流行りも違ったりする。
 染料が高かった時代は色鮮やかなドレスが富裕層の象徴だったけど、現代ではむしろ白黒が富裕層の象徴で上品だと思われる。
+
+セックスには性病の問題があるので、汚い人とはセックスしたくないのが自然。
+あとは病弱だったりモテなかったりする人とは子供を作っても次の世代が続かないので避けられやすい。
