--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -109,3 +109,7 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 同じ仕事を趣味にしてるとか、同じゲームをやりこんでるとか。あるいはボードゲームみたいにその場でできるゲームをするとか。
 
 社交で大事なのは謝意。関係を続けようとする気持ち。
+
+人付き合いはおおらかに、焦らずじっくりと付き合っていくのが大事。
+
+愛があるから付き合っていくのか、用があるから付き合っていくのか。
