--- a/games/shogi/将棋の守り.md
+++ b/games/shogi/将棋の守り.md
@@ -1,3 +1,22 @@
 基本的には受けるか逃げるか。
 
-「玉の早逃げ、八手の得」
+## 守りの格言
+
+- 「玉の早逃げ、八手の得」
+
+## 囲いの種類
+
+- 中住まい
+- 矢倉
+- 雁木
+- 穴熊
+- 美濃
+
+## Zについて
+
+「絶対に詰まない」の頭文字が由来。
+相手に駒を何枚渡しても絶対に詰まない状況。わかりやすいのは穴熊。最低でも1手の余裕がある、と確信できる状況。
+
+## その他
+
+玉を先に囲うのは玉を動かすタイミングを図るのが難しいからで、AIみたいにミスの少ない将棋だと居玉もよく見る。
