--- a/games/shogi/将棋の戦法.md
+++ b/games/shogi/将棋の戦法.md
@@ -1,31 +1,31 @@
 # 将棋の戦法
 
+## お互いの戦法による区分
+
+- 相居飛車
+- 相振り飛車
+- 対抗形: 一方が居飛車でもう一方が振り飛車
+
 ## 飛車の位置による区分
 
 - 居飛車
-- 袖飛車
-- 右四間飛車
+- 袖飛車: 3筋に振る
+- 右四間飛車: 4筋に振る
 - 振り飛車
-  - 三間飛車
-  - 四間飛車
-
-## 囲いによる区分
-
-- 矢倉
-- 雁木
-- 穴熊
+  - 三間飛車: 7筋に振る
+  - 四間飛車: 6筋に振る
 
 ## 相居飛車の区分
 
-- 角換わり
-- 相掛かり
-- 横歩取り
+- 角換わり: お互いに角を交換する
+- 相掛かり: お互いに飛車先の歩を交換する
+- 横歩取り: 先手が後手の角の前の歩を飛車で取る
 
 ## 進行による区分
 
-- 持久戦
-- 力戦
-- 急戦
+- 持久戦: お互いに囲いあって手数がかかる
+- 力戦: 早い段階で定石から外れる
+- 急戦: 早い段階で攻める
 
 ## メモ
 
@@ -36,6 +36,8 @@
 将棋の戦法を知っていると、序盤の局面を戦法でざっくり区分して見ることができる。
 「これは先手の早繰り銀を後手が雁木で受けているんだな」みたいな。
 
-## Reference
+将棋では後手が戦型を決められるので、あまりにも先手有利になる戦法はプロシーンでは廃れていく。先手は先手有利、後手は後手有利あるいはなんとかやれると思った戦法と、あまりにも有利すぎる戦法への対策だけが残る。
+
+## References
 
 - [将棋の戦法 - Wikipedia](https://ja.wikipedia.org/wiki/%E5%B0%86%E6%A3%8B%E3%81%AE%E6%88%A6%E6%B3%95)
