--- a/shared/art/センス.md
+++ b/shared/art/センス.md
@@ -11,3 +11,6 @@
 人嫌いは社交嫌いであるように、いくつかの感覚でその分野の適性が決まる部分がある。
 
 感覚なので、まずは知識として良いものを見分け、それに繰り返し触れて慣れることで磨かれる。
+
+特定の分野に特化してセンスを磨きすぎて、世間とズレると、それはそれで困ることもある。
+特にビジネスで金を出す人と合わないと売れない芸術家になる。
