--- a/shared/gift/贈与.md
+++ b/shared/gift/贈与.md
@@ -23,3 +23,11 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 愛のために手間や時間をかけるのも贈与になる。
 
 欲がない人は贈り物を選ぶのが難しい。
+
+- 予算で絞る
+- 相手の好みで絞る
+
+- 一人か複数か
+- 全体の予算でいくらか
+- 個別の予算でいくらか
+- 誰を特別扱いするか
