--- a/shared/love/tips/愛を示す.md
+++ b/shared/love/tips/愛を示す.md
@@ -1,15 +1,20 @@
 - 目を向ける
+- 目を合わせる
+- 微笑みかける
 - 体を近づける
   - 近くの席に座る
-  - 体を触る
+- 体を触る
 - 話しかける
+- 手を振る
 - 電話やメールで連絡する
 - デートに誘う
 - 褒める
+- 口説く
 - 贈り物をする
 - 変化に気づいて指摘する
 - 振る舞いが似てくる、癖が移る
 - 相手の言葉を拾う
+- 言葉で愛を伝える
 
 愛を示す、好意を示す。
 
@@ -28,3 +33,7 @@
 好きとか好きじゃないとかの前に、嫌われているならそもそも好意を示すべきではない。
 最低でも相手から遠ざけられないことを確認してから好意を示す。
 特に、女性は男性の好意を悪意として受け取る場合がある。
+
+愛されるかどうかに関わらず、愛を示す。
+
+愛には前提も根拠も報酬もいらない。ただ愛を示す。
