--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -113,3 +113,7 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 人付き合いはおおらかに、焦らずじっくりと付き合っていくのが大事。
 
 愛があるから付き合っていくのか、用があるから付き合っていくのか。
+
+社交とか、親しくなることに共通するのは、人との接触、あるいはコミュニケーション。
+
+愛着と信頼、頼られることと頼ること。
