--- a/shared/trust/intimacy/tips/誰かと親しくなる.md
+++ b/shared/trust/intimacy/tips/誰かと親しくなる.md
@@ -130,3 +130,25 @@
 親しくなる機会を逃さない。
 誘いに乗るとか、こっちから誘うとか。
 あと「XXに行きたい」「XXしたい」みたいな話をすぐ拾って予定を決めるとか。
+
+- 相手が親しくなりたいと思っているのに気づく
+- 親しくなりたいのを示す
+- アプローチする
+
+接近する、あるいは誘う。
+
+誘うことで、相手からも近づいてもらう。
+自分から接近するばかりだと逃げられてしまうことがある。
+逃げられないようにする。
+
+愛しているからと言って、必ずしも近づくべきとは限らない。
+
+近づくのは、愛があるから？用があるから？
+
+接近、接触。
+
+接近は接触の過程？
+
+接触することで、情報を交換する。
+
+愛を示せば、親しくなりたいのも伝わる。
