--- a/shared/engagement/愛着.md
+++ b/shared/engagement/愛着.md
@@ -1,3 +1,5 @@
+# Attachment
+
 愛着を持つことで、それ以外のモチベーションにもなる。
 「趣味のために仕事を頑張ろう」とか。
 
@@ -31,3 +33,10 @@
 スタンプラリーや御朱印のように、そのときしか手に入らないようなものを保存するのも愛着を育てるのにいいかも。
 
 エンゲージメントは再生産が目的なのかも。仲間が増えていく。
+
+頼られると愛着が湧く。
+エンゲージメントが高くなるのは、頼られるからかも。上司が一人でできたらだめ。
+
+所属意識。
+
+愛着を育てるには？
