--- a/shared/trust/intimacy/親しさ.md
+++ b/shared/trust/intimacy/親しさ.md
@@ -175,3 +175,6 @@ https://gigazine.net/news/20170711-make-friends-scientific-method/
 親密というのは、近づかれても逃げられない距離。通常、動物は何かが近づきすぎると離れる。
 
 親しくなるためにどうするか。どうやって距離を近づけるか。
+
+関係の深さ？
+接触の頻度、接触の度合い、近さ。
