--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -117,3 +117,11 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 社交とか、親しくなることに共通するのは、人との接触、あるいはコミュニケーション。
 
 愛着と信頼、頼られることと頼ること。
+
+社交は最低限なので、自動化するくらいでいい。社交辞令で固める。その上で、親しくなったりするのはアドリブで追加する。
+
+社交の基本は細く長く。
+
+友人や恋人は単なる社交とはまた違う。関係を続けるだけじゃなくて、より親しくなろうとする。
+
+信頼されたり愛着を持たれたりすると関係は続けやすい。
