--- a/shared/trust/intimacy/tips/恋人になる.md
+++ b/shared/trust/intimacy/tips/恋人になる.md
@@ -46,4 +46,4 @@
 いわゆる「配偶者、パートナー」を指す場合がある。
 その場合はお互いが長く一緒にいることを目指さないなら恋人とは捉えないかも。
 
-恋人になるには、セックスに誘わないといけない。直接的だと生々しいけど。
+恋人になるには、fセックスに誘わないといけない。口説く。直接的だと生々しいけど。
