--- a/shared/trust/intimacy/tips/誰かと親しくなる.md
+++ b/shared/trust/intimacy/tips/誰かと親しくなる.md
@@ -152,3 +152,12 @@
 接触することで、情報を交換する。
 
 愛を示せば、親しくなりたいのも伝わる。
+
+親しくなるのは単に関係を続けるというよりも、距離を縮めること。
+
+信頼されるだけが距離を縮めることではない。
+接触 (contact) が多いことかも。
+
+相手から親しくなろうとしているなら、自分もそれに気づいて、応える。
+
+自己開示って親近感を与えるため？他にもあるかも。
