--- a/shared/trust/intimacy/距離感.md
+++ b/shared/trust/intimacy/距離感.md
@@ -1,3 +1,6 @@
+- 物理的な距離
+- 心理的な距離
+
 > 距離感を測るためには、相手とのコミュニケーションを通じて、相手の態度や反応を観察することが大切です。具体的には、以下のようなポイントに注目すると良いでしょう。
 >
 > 相手の言葉や態度から、距離感を読み取る：相手が話す言葉や、表情、態度などから、距離感を読み取ることができます。例えば、相手が目を合わせて話してくる場合は、親密さを求めている場合がある一方、目を逸らす場合は、適度な距離感を保ちたいという意思>表示かもしれません。
@@ -50,3 +53,5 @@
 
 急激に近づこうとすると拒否されやすい。
 ただ、初めから距離感が近い人もいる。
+
+近すぎると傷つけ合い、遠すぎると孤独を感じる。
