--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -950,3 +950,5 @@ loveとgoodの概念は近い。
 愛は双方向のものではないが、一方的な愛は相手の重しになりやすい。
 
 愛には影響力がある。workではないけど、他人の好きなものを好きになったりする。
+
+恋人が欲しいとか、友人が欲しいとか、何か結果を求めているうちは愛ではないのかも。用。
