--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -125,3 +125,6 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 友人や恋人は単なる社交とはまた違う。関係を続けるだけじゃなくて、より親しくなろうとする。
 
 信頼されたり愛着を持たれたりすると関係は続けやすい。
+
+不快にさせるようなことを言わない、しない
+不安にさせるようなことを言わない、しない
