--- a/shared/human/body/muscle/training/exercises/腕立て伏せ.md
+++ b/shared/human/body/muscle/training/exercises/腕立て伏せ.md
@@ -1,3 +1,5 @@
+# Push-up
+
 ## 負荷を調整する
 
 1. 負荷なし（立ったままフォームのみ）
@@ -7,3 +9,46 @@
 
 腕立て伏せは負荷なし、立ったまま腕立て伏せのフォームで腕を前後させるだけのやり方もある。ほとんど鍛えられないけど、最低限というか、全く鍛えてない人はここから始めてもいい。
 負荷ゼロから、腰まで地面につけるパターン、膝まで地面につけるパターン、つま先だけつける通常のパターン、と負荷を調整しやすいのも腕立て伏せの良いところ。
+
+## やり方
+
+腕立ては腕が 60 度以上外に向いていると肩を痛めやすくなる。
+
+腕立てはゆっくりしたほうが効くし、関節を痛めにくい。
+
+正しいやり方のポイント:
+
+1. 手は肩よりも少し外に置く
+2. 手は胸を床に着けた時に肩の少し下に来るように置く
+3. 中指をまっすぐ正面に向ける
+4. 脇を締め、肩甲骨を寄せながら下げる
+5. 頭から尻まで体をまっすぐに維持する
+
+[腕立て伏せでよくある間違い 7 つ｜正しいフォームについて解説！ - YouTube](https://youtube.com/watch?v=NS4Rta4mFWQ&si=UuAu8nVGqpu8fLCL)
+
+よくある間違い:
+
+- 肘を横に開いている
+- 左右対称になっていない
+- 尻が下がって、背中が反っている
+- 尻が上がって、背中が丸まっている
+- 肩甲骨をうまく使えていない
+- 上下の可動域が狭い
+- 頭が下がっている
+
+## 腕立ての種類
+
+1. ダイヤモンドプッシュアップ
+2. リーンプッシュアップ
+3. パイクプッシュアップ
+4. リーンムーブ or ショルダータッチプッシュアップ
+5. サークルプッシュアップ
+6. ナロープッシュアップ
+7. ヒンドゥープッシュアップ
+8. ショルダータッチパイクプッシュアップ
+
+[【たった 10 回】騙されたと思って 30 日間この筋トレを試してみてください。 - YouTube](https://youtube.com/watch?v=52xzTBcO6eQ&si=stx95a5PmeSTsLeF)
+
+## その他
+
+腕立ては姿勢を調整すると鍛える筋肉を変えられる。
