--- a/shared/love/tips/人を好きになる.md
+++ b/shared/love/tips/人を好きになる.md
@@ -1,3 +1,5 @@
+# 人を好きになる
+
 積極的に人を好きになるためには、真似したいところを見つけるといい。
 服装や化粧のように表面的なところでもいいし、言動でもいいし、仕事や趣味でもいいし。
 
@@ -5,3 +7,5 @@
 配信とかテレビとか面白い人に興味があるなら、自分の振る舞いが間違っている。
 
 他人に興味がない、と割り切るには早い。
+
+その人の一日を想像して遊んでみる。
