--- a/games/shogi/詰め将棋.md
+++ b/games/shogi/詰め将棋.md
@@ -1,9 +1,19 @@
 # 詰め将棋
 
+## コツ
+
+まず埋めないと王に逃げられるルートを潰すことから考える。
+
+## 手数の数え方
+
+- 自分だけでなく相手の手数も数える (3手詰めなら、自分、相手、自分で詰み)
+- 最長手数を数える
+- 無駄な合駒は手数に数えない
+
+## 詰将棋の実用性
+
 とりあえず 1-3 手詰くらいは一瞬で解けるといい。
 
 5-7 手詰くらいまで一瞬で解けると実戦でも役に立つ。
 
 一瞬で解ける手数が増えるほど詰みを見逃しにくくなるけど、手数が増えるほど実戦では現れにくくなる。
-
-詰将棋では、まず埋めないと王に逃げられるルートを潰すことから考える。
