--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -128,3 +128,6 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 
 不快にさせるようなことを言わない、しない
 不安にさせるようなことを言わない、しない
+
+社交では必ずしも親しくならなくていいけど、ある程度は親しくなった方が関係を続けやすい。
+ただ、距離感が近すぎると逆に嫌なところが見えて関係が切れてしまうこともある。
