--- a/shared/trust/intimacy/tips/誰かと親しくなる.md
+++ b/shared/trust/intimacy/tips/誰かと親しくなる.md
@@ -161,3 +161,5 @@
 相手から親しくなろうとしているなら、自分もそれに気づいて、応える。
 
 自己開示って親近感を与えるため？他にもあるかも。
+
+接触の機会を増やすのは親しくなるために必要で、社交というよりは親密度の問題かも。まぁ、親しくなれば社交としてもうまくいきやすい。
