--- a/shared/trust/intimacy/親しさ.md
+++ b/shared/trust/intimacy/親しさ.md
@@ -178,3 +178,6 @@ https://gigazine.net/news/20170711-make-friends-scientific-method/
 
 関係の深さ？
 接触の頻度、接触の度合い、近さ。
+
+誰かと親しくなったことでお互いに嫌なところが見えて、どちらかから関係を切ってしまうこともよくある。
+社交として長く関係を続けるなら、親しくなりすぎないほうがいいのかもしれない。
