--- a/shared/commerce/marketing/tips/質か量か.md
+++ b/shared/commerce/marketing/tips/質か量か.md
@@ -11,3 +11,8 @@
 
 質が飽和すると量が求められる。生成AIなんかは出てきた時期がちょうどよかった。
 ただ、ここでいう量というのは、好みに合うかどうか。豊かさということ。多様な選択肢が増えることで、より好みに合うものが見つかりやすくなる、ある種の質。
+
+質より量。
+というか、質を高めるには量が必要。
+
+とにかく量をこなせばいいわけではない。量によって質を高めるのが目的。常に良い方法を模索しながら量を確保する。質を高めたあとは、量より質にこだわる。
