--- a/shared/human/being/well/安心.md
+++ b/shared/human/being/well/安心.md
@@ -20,3 +20,5 @@ Peace of mind
 安心が必ずしも安全ではないけど、不安を抱えたままだと脳のリソースが削られる。無駄な不安は取り除いた方がいいし、必要な不安はさっさと対策した方がいい。
 
 安心は、脳のリソースを削らないために目指すもの。
+
+安心感を与えるのは、信頼かな？それか社交や人気？
