--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -1,3 +1,6 @@
+- 付き合いを始める
+- 付き合いを続ける、やめない
+
 社交は人と付き合っていくこと。関係を続けること。
 
 仕事が暇になると社交の割合が増える。
@@ -131,3 +134,5 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 
 社交では必ずしも親しくならなくていいけど、ある程度は親しくなった方が関係を続けやすい。
 ただ、距離感が近すぎると逆に嫌なところが見えて関係が切れてしまうこともある。
+
+社交の中心的な関心は人付き合いを続けることだけど、続けるには始めないといけないし、自分から止めないようにしないといけない。
