--- a/shared/change/変化.md
+++ b/shared/change/変化.md
@@ -62,3 +62,5 @@ https://logmi.jp/tech/articles/330391
 変化には時間がかかる。
 
 変化の方法には、直接的なworkと間接的なinfluenceがある。
+
+理や力、客観的な影響力によって動かすか、愛や情、主観的な影響力によって動かすか。
