--- a/shared/sex/dating/恋人を探す.md
+++ b/shared/sex/dating/恋人を探す.md
@@ -1,3 +1,5 @@
+# Dating
+
 恋人を探す。
 
 最近はマッチングアプリで結婚したりする人も増えてる。
@@ -8,3 +10,5 @@
 恋愛の話題を振ることで、恋人を探していることを示す。
 
 恋人がいるのに恋愛の話題を他の人に振るのは品がない。
+
+恋人を探す段階をdatingという。
