--- a/shared/sex/tips/避妊.md
+++ b/shared/sex/tips/避妊.md
@@ -5,7 +5,11 @@
 子どもを作る予定がないなら避妊する。
 避妊しないと堕胎もありうる。
 
-避妊具で代表的なのはコンドーム。
-あとは女性用、男性用のピルとか。
+主な避妊具:
+
+- コンドーム（男性用、女性用）
+- ピル（男性用、女性用）
 
 体が未熟ならそもそもセックスしないのが一番だけど、子どもを作るくらいなら避妊したほうがいい。
+
+体が未熟なのに妊娠してしまうと死亡するリスクが高い。
