--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -136,3 +136,5 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 ただ、距離感が近すぎると逆に嫌なところが見えて関係が切れてしまうこともある。
 
 社交の中心的な関心は人付き合いを続けることだけど、続けるには始めないといけないし、自分から止めないようにしないといけない。
+
+現代は出会いが多すぎて、逆にすぐ親しくなれない人ととはすぐ関係が切れる。お互いに人と会うことが多いと一人一人に割く時間は少なくなっていく。
