--- a/shared/sex/dating/デート.md
+++ b/shared/sex/dating/デート.md
@@ -5,3 +5,6 @@
 デートは meeting の一種で、会話や体の接触、コミュニケーション、感情表現などを伴う。
 
 恋愛関係になる前にデートしたりすることを英語でdatingという。デートしていて、付き合っている状態は恋人ではない。
+
+デートの目標はスキンシップ。セックスの前座。
+手を繋ぐとか、ハグするとか、キスするとか。
