--- a/shared/sex/tips/男女の違い.md
+++ b/shared/sex/tips/男女の違い.md
@@ -1,1 +1,37 @@
+## Male
+
+男性は肉体的に強いことが多い。
+骨や肉も強くなりやすいし、体格も良い。
+
+男女の体力差は思考力の差にも繋がる。
+男同士であっても、体力があるほうが基本的によく考える余裕がある。
+
+## Female
+
 「男は論理的、女は感情的」というのは「女は知能が低い」のマイルドな言い方。
+
+女性って年寄りと似てるかも。
+
+女性は好意を悪意として受け取るのでめんどくさい。
+
+女と喧嘩になったら「でも俺が悲しくなったのは事実なんだから」で勝てる。
+https://x.com/karasu_pua/status/1937868155831152821?s=12
+
+女性は、そもそも出産というハンデを抱えている。
+どうしても労働者としては見劣りしてしまうので、男性よりも稼ぐのは難しい。
+だからこそ家庭に入って金銭以外の部分で家庭を支える方が楽。そちらの方がパートナーと対等になりやすい。
+まぁ、ペットとして生きたいという人もいるかも。
+
+一般的には、力もないし、体力もない。
+
+労働者として男女の価値を同じくするなら、男性の出産・育児休暇を法律で強制するくらいしかない。
+
+男は出産も授乳もできない。女より劣っている。だから、他の面で価値を示すしかない。
+
+女性は「最悪この男性に孕まされても大丈夫か」を考えて男性と接する。無意識レベルで。
+
+## その他
+
+生物的には、卵子（大きく移動性の低い配偶子）を持っているほうがメスで、そうでないほうがオス。
+タツノオトシゴみたいに受精して卵を作るところまではメスがして、オスが卵を抱える種もいる。
+虫の中にはメスが交尾器をオスに挿入して精子を受け取る種もいる。
