--- a/shared/sex/dating/tips/口説く.md
+++ b/shared/sex/dating/tips/口説く.md
@@ -9,3 +9,10 @@
 異性を褒めても別に口説いている訳ではない。
 
 口説く、には、誘う、のニュアンスがある。
+
+告白する前にアプローチが必要。
+告白しかアプローチする手段を持たないのでは告白しても実らない。
+告白は最後。ない方がいいくらい。
+
+フィクションと違って、現実には「告白」という工程がよくない。
+むしろそれによって本当に必要な工程を欠かしてしまうこともある。
