--- a/shared/art/センス.md
+++ b/shared/art/センス.md
@@ -16,3 +16,7 @@
 特にビジネスで金を出す人と合わないと売れない芸術家になる。
 
 感覚的な部分でその分野に向き不向きがある。人嫌いが社交嫌いなのと同じで、適性、センスがある。
+
+センスは大人になっても磨けるけど、子供のうちに磨いておくのが楽ではある。
+
+「才能」と呼ばれる部分の大きなところ。
