--- a/shared/influence/影響.md
+++ b/shared/influence/影響.md
@@ -41,3 +41,6 @@ influence は間接的で影響を与えるもの。
 直接働きかけるというよりは、じっくりと時間をかけて伝播させる。
 
 影響には作用よりも時間がかかる。
+
+直接接触しなくても知人から伝わったりSNSで伝わったりして影響することがある。
+「彼がこう言ってたよ」みたいに伝えられることもある。
