--- a/shared/time/時間.md
+++ b/shared/time/時間.md
@@ -44,3 +44,6 @@ timeとluckは統合してもいいのかも。
 何かやりたいことがあるなら、時間を作った後は機会を作らないといけない。
 
 時間が長いことよりも機会が多いことが重要。
+
+機会やチャンス、リスクも時間の文脈の中に取り込んでもいいかも。
+時間が止まっているならチャンスもリスクもない。時間は可能性でもある。時間が長いほど可能性も大きくなる。ゼロだとどうしようもない。
