--- a/shared/trust/intimacy/親しさ.md
+++ b/shared/trust/intimacy/親しさ.md
@@ -181,3 +181,7 @@ https://gigazine.net/news/20170711-make-friends-scientific-method/
 
 誰かと親しくなったことでお互いに嫌なところが見えて、どちらかから関係を切ってしまうこともよくある。
 社交として長く関係を続けるなら、親しくなりすぎないほうがいいのかもしれない。
+
+intimacyは基本的に恋人に対して使われる表現で、友人にはあまり使わないっぽい。
+
+恋人とは親しくなるしかない。
