--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -503,3 +503,6 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 「突然現れた得体の知れない隣人が人の心を掴むには『愛（ものがたり）が必要』ということよ」『悪役令嬢の中の人』
 
 信頼は信じることよりも頼ることがベース。
+
+頼ったり頼られたりすることで関係が深まっていく。
+親しさとはまた違う気もする。
