--- a/shared/information/情報.md
+++ b/shared/information/情報.md
@@ -191,3 +191,8 @@ https://share.google/qJIl8gO83xEZQZjbk
 情報は判断や行動の基礎の文脈。リスクと関連が深い。
 
 「情報とは価値が高いうちに利用するものぞ？」『転スラ』
+
+情報はリスクを下げる。
+リスクを下げるということは、試行回数を減らせるということ。行動のコストを下げられる。
+例えば旅先の情報がわかっていると、美味しい飲食店に最初から入ることもできるし、相場がわかっていればぼったくりにも引っかかりにくい。
+本来は何度も通ってようやくわかる情報を、先に手に入れる。ただ、足で情報を集める楽しみというのもある。
