--- a/shared/joke/tips/滑った時の対処.md
+++ b/shared/joke/tips/滑った時の対処.md
@@ -2,9 +2,12 @@
 
 - 間をとる
   - 「え？」
+  - 「笑って！」
   - 「静かになるのやめてね」
 - 助けを求める
   - 「助けてくれー！」
 - 逆ギレする
   - 「おーい！」
   - 「滑らすなや！」
+
+滑った時の対処を知っておくことで、滑っても自分でフォローできる場合がある。
