--- a/shared/joke/ボケ.md
+++ b/shared/joke/ボケ.md
@@ -162,3 +162,6 @@ https://youtu.be/CCRQb6UxWC8?si=I5Y8SEUZ3IizFffF
 
 ボケが上手い人はまずフリが上手い。
 偶発的なアクシデントが起きそうなところでもフリを入れておくとなお良い。
+
+わかりづらいボケというか、教養や文化の下地が一致しなかった場合のボケをどうするべきか。
+自分がわからない側なら「え？どういうこと？」でもいいっちゃいい。「わからんわからん！」でもいい。
