--- a/shared/people/個人の印象.md
+++ b/shared/people/個人の印象.md
@@ -1,7 +1,11 @@
-人の印象
+# 個人の印象
 
-S / M
-ボケ / ツッコミ
-まとも / PON
-隙がある / ない
-かわいい / かっこいい
+- いいところ
+- 悪いところ
+  - 直してほしいところ
+- Sか、Mか
+- ボケか、ツッコミか
+- まともか、PONか
+- 隙があるか、ないか
+- かわいいか、かっこいいか
+- 優しいか、厳しいか
