--- a/shared/decision/planning/計画.md
+++ b/shared/decision/planning/計画.md
@@ -113,3 +113,6 @@ plan, project, program はどれも計画。
 
 「そりゃあ、計画通り進めば、どんなものでも上手くいくよ。でも……ねぇ」
 『水属性の魔法使い』
+
+段階を踏むのは論理的だけど、一足飛びに進むような例外にも対処しないといけない。
+計画とか実行の文脈。
