--- a/shared/trust/intimacy/スキンシップ.md
+++ b/shared/trust/intimacy/スキンシップ.md
@@ -19,3 +19,19 @@
 どこまで許容されるかは悩ましいところ。
 
 スキンシップの一番ハードルが低いのは、隣に座って肩や膝を軽く当てること。すぐ離れるようなら相手はそれ以上親しくなりたくないと思っている。脈なし。
+
+最近はセクハラの問題もあるので、異性に触るよりは異性に触ってもらうように誘う方が安全ではある。
+
+- ハイタッチを求める
+- 階段などで腕や手を差し出す
+- 立ち上がるために手を差し出す
+
+無難なところから触れる。
+
+- 肩
+- 腕
+- 手
+
+接触しないまでも、体や顔を近づけるとか、コップを近づけるとかがもっと前の段階。
+
+強引なスキンシップは断れない人を見つける意味もある。餌を。悪用厳禁。
