--- a/shared/communication/コミュニケーション.md
+++ b/shared/communication/コミュニケーション.md
@@ -275,3 +275,5 @@ engagement とも関係が深い。
 コミュニケーションにおいて、「何を知るべきか」「何を知らせるべきか」をわかってないとうまくいかない。
 
 social communicationというと企業などから社会に向けた、1:Nのコミュニケーション。不特定多数に対して発信するメッセージ。
+
+- どういう情報をやりとりするか
