--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -140,3 +140,5 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 現代は出会いが多すぎて、逆にすぐ親しくなれない人ととはすぐ関係が切れる。お互いに人と会うことが多いと一人一人に割く時間は少なくなっていく。
 
 そもそも仕事以外では社交があまり求められてないのかも。親しい友達付き合いばかりが求められていて、細く長く関係を続けるのに関心がないとか。
+
+社交や親交において、どういう情報をやりとりするか。
