--- a/shared/politics/争い.md
+++ b/shared/politics/争い.md
@@ -81,3 +81,5 @@ https://twitter.com/5ducks5/status/1504980931223818244
 特に、一つしかないものを取り合うだけで争いになる。
 
 仲がいいのに表面上は争うのも、むしろわだかまりがないからこそできること。プロレス。
+
+争いがあるのが敵。
