--- a/shared/cooking/recipes/soup/鍋.md
+++ b/shared/cooking/recipes/soup/鍋.md
@@ -1,3 +1,22 @@
+## スープの種類
+
+- 塩: 水炊きなど
+- 醤油（醤油と出汁）
+- 割下（醤油と砂糖）: すき焼きなど
+- 昆布だし: しゃぶしゃぶなど
+- 合わせだし: おでんや寄せ鍋など
+- あごだし
+- みそ
+- 鶏ガラ: ちゃんこやもつ鍋など
+- キムチ
+- 豆乳
+- ごま豆乳
+- 坦々
+- トマト
+- カレー
+
+## その他
+
 鍋は具少なめに作ってから雑炊。
 
 鍋の〆はうどんやラーメンでもいいかも。
@@ -25,3 +44,5 @@
 
 グラタンやシチューはルーだけ作って冷凍するか買っておくと楽。
 グラタンはホワイトソースが面倒だけど、結局具材も茹でないといけないので楽できない。でもシチューのルー買うのはありかも。
+
+水炊きは具材の鶏の出汁がベースで、味付けは塩だけでもいい。
