--- a/shared/cooking/recipes/pot/鍋料理.md
+++ b/shared/cooking/recipes/pot/鍋料理.md
@@ -1,12 +1,11 @@
 ## スープの種類
 
 - 塩: 水炊きなど
-- 醤油（醤油と出汁）
 - 割下（醤油と砂糖）: すき焼きなど
+- みそ
 - 昆布だし: しゃぶしゃぶなど
 - 合わせだし: おでんや寄せ鍋など
 - あごだし
-- みそ
 - 鶏ガラ: ちゃんこやもつ鍋など
 - キムチ
 - 豆乳
@@ -18,6 +17,8 @@
 ## その他
 
 鍋は具少なめに作ってから雑炊。
+
+鍋は煮込み料理。
 
 鍋の〆はうどんやラーメンでもいいかも。
 マルタイ棒ラーメンとか薄味で使いやすい。
