--- a/shared/joke/笑い.md
+++ b/shared/joke/笑い.md
@@ -2,3 +2,12 @@
 
 笑いは緩急。
 緊張からの緩和で笑いが生じる。
+
+「楽しい」「癒される」「面白い」を分ける。
+
+「この欲界の遍く地に蔓延る…人を笑い、人に笑われるという行為は善かれ悪しかれ、ダメな自分達を許し合う儀式（ショー）なのかもしれません」『神と使い捨てカイロ』
+
+- 楽しい時
+- 面白い時
+- 癒された時
+- やばい時
