--- a/shared/logistics/兵站.md
+++ b/shared/logistics/兵站.md
@@ -16,3 +16,5 @@
 ビジネスや戦争の土台。
 
 必要なものを必要な時に必要なところへ運ぶのがロジスティクス。そのためには物品自体の用意もしないといけない。
+
+「敵に囲まれて空腹で、皆もう極限状態だったんだ。私が運んだのは物資じゃなく希望だった。」『転生幼女、教団はじめました。』
