--- a/shared/intelligence/知性.md
+++ b/shared/intelligence/知性.md
@@ -114,3 +114,13 @@ learning, thinking, training あたりは知性の関連だと思う。
 頭がいい人というのは応用が効くので、得意分野でなくても一通りできる。そうでなければ頭が悪いということだ。
 
 結局、検索もAIも知らないことは調べられない。
+
+IQの検査では以下の7項目に分けて検査する。
+
+- 言語能力
+- 論理・推理力
+- 数量認知能力
+- 空間把握能力
+- 記憶力
+- 知覚の速さ
+- 言語の流暢さ
