--- a/shared/intelligence/知恵.md
+++ b/shared/intelligence/知恵.md
@@ -14,3 +14,6 @@
 知識があっても思考に使わないと宝の持ち腐れだ。
 
 「知恵は、道理を判断し処理していく心の働き。筋道を立て、計画し、正しく処理していく能力。知慮、思慮とも。」（Wikipedia）
+
+wisdomは判断・行動する力が重要で、情報をどう使うか。workの部分が大きいかも。
+対してintelligenceは知識と思考。
