--- a/shared/people/人を知る.md
+++ b/shared/people/人を知る.md
@@ -10,12 +10,12 @@
 
 - 経験
 - 知識
-- 身体的特徴
+- 身体的・物理的特徴
   - 健康状態
   - 外見
     - 容姿
     - 表情
-- 精神的特徴
+- 精神的・心理的特徴
   - 精神状態
     - 精神的安定性
   - 欲求
@@ -48,7 +48,9 @@
 - 機能的特徴
   - 仕事
   - 得意・上手なこと、苦手・下手なこと
-- 状況
+  - 知能
+  - 体力
+- 社会的特徴
   - 人間関係
     - 所属
       - 国籍
@@ -62,6 +64,7 @@
     - 職場・同僚
     - 友人
     - 恋人
+- 経済的特徴
   - 経済状況
 - 実績
   - 経歴
