--- a/shared/time/時間.md
+++ b/shared/time/時間.md
@@ -47,3 +47,9 @@ timeとluckは統合してもいいのかも。
 
 機会やチャンス、リスクも時間の文脈の中に取り込んでもいいかも。
 時間が止まっているならチャンスもリスクもない。時間は可能性でもある。時間が長いほど可能性も大きくなる。ゼロだとどうしようもない。
+
+情報の観点で見ると、時間と距離は同じ。
+遠くにあるということは、過去にあるということ。
+より遠くにあるものほど、自分のところまで届く頃にはより過去の状態が届いている。
+
+英語なんかだと情報の確度が低いことや理想なんかに過去形を使ったりする。
